--- a/BarFinder/package.json
+++ b/BarFinder/package.json
@@ -7,10 +7,16 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
+    "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta11",
     "serve-favicon": "^2.4.2"
   }
