--- a/BarFinder/package.json
+++ b/BarFinder/package.json
@@ -6,7 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.4.0",
+    "bl": "^1.2.0",
     "body-parser": "^1.17.1",
+    "commander": "^2.9.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.3",
@@ -18,6 +21,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta11",
+    "request": "^2.81.0",
     "serve-favicon": "^2.4.2"
   }
 }
