--- a/BarFinder/package.json
+++ b/BarFinder/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.6.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.4",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
